--- a/lesson_1/assets/css/style.css
+++ b/lesson_1/assets/css/style.css
@@ -85,7 +85,7 @@ body{
 	color:#fff;
 }
 .header__inner{
-	padding: 15px 30px;
+	padding: 30px 30px 15px 30px;
 }
 .header__logo, .header__phone{
 	display: inline-block;
@@ -112,22 +112,35 @@ body{
 	color:#fff;
 	padding: 5px 10px;
 	transition: .3s;
+	display: inline-block;
+	position: relative;
 }
-.header__menu ul li a:hover{
-	padding: 2px 5px;
-	border:1px #fff solid;	
+.header__menu ul li a:hover::before{
 	transition: .3s;
+	width: 100%;
 }
 .header__menu ul li a:active{
 	color:yellow;
 }
-.main{
+.header__menu ul li a::before{
+	content: "";
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	height: 2px;
+	width: 0;
+	transition: 0.3s;
+	background-color: #fff;
+}
 
+.main{
+	text-align: center;
 }
 .main__inner{
 
 }
 .main__block{
+	position: relative;
 	display: inline-block;
 	width: 30%;
 	background: #000;
@@ -135,6 +148,62 @@ body{
 	margin-top: 2.5%;
 	margin-left: 2.5%;
 	margin-bottom: 2.5%;
+}
+.main__block img{
+	width: 100%;
+	position: absolute;
+	left: 0;
+	top: 0;
+	height: 100%;
+	filter: grayscale(100%);  
+}
+.main__block:hover img{
+	filter: none;
+	transition: 0.3s;
+}
+.main__block::before{
+	content: "";
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	z-index: 1;
+	display: none;
+	transition: 0.3s;
+	background-color: rgba(0,0,0,0.5);
+}
+.main__block:hover{
+	/*transform: translate(0,-10px);*/
+	transition: 0.3s;
+	transform: matrix(10,0,0,10,0,0);
+}
+.main__block:hover::before{
+	display: block;
+	transition: 0.3s;
+}
+.main__button{
+	display: block;
+	opacity: 0;
+	position: absolute;
+	font-size: 18px;
+	z-index: 11;
+	text-decoration: none;
+	background: none;
+	color: #fff;
+	border: 1px solid #fff;
+	border-radius: 3px;
+	padding: 5px 10px;
+	top: 50%;
+	left: 50%;
+	margin-left: -54.7px;
+	margin-top: -16.5px;
+	transition: 0.3s;
+	cursor: pointer;
+}
+.main__block:hover .main__button{
+	opacity: 1;
+	transition: 0.3s;
 }
 .main__b1{
 
